--- a/libs/jump_portrait/pyproject.toml
+++ b/libs/jump_portrait/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "polars>=1.5.0",
     "pooch>=1.7.0,<2",
     "pyarrow>=16.1.0",
-    "s3path>=0.5.0,<0.6",
+    "s3path>=0.6.0",
     "tqdm>=4.66.1,<5",
     "s3fs>=2024.6.0,<2025",
     "numpy<2.0",
